--- a/frontend/translations/es.json
+++ b/frontend/translations/es.json
@@ -77,6 +77,13 @@
         "billingRemoved": "Todos los datos de facturación serán eliminados",
         "scheduled30Days": "Tu cuenta será programada para eliminación en 30 días",
         "gracePeriod": "Puedes cancelar esta solicitud en cualquier momento durante el período de gracia de 30 días. Después de 30 días, todos tus datos serán eliminados permanentemente y no se podrán recuperar.",
+        "chooseDeletionType": "Elige el tipo de eliminación:",
+        "gracePeriodOption": "Período de Gracia de 30 Días",
+        "gracePeriodDescription": "Tu cuenta será programada para eliminación en 30 días. Puedes cancelar esta solicitud en cualquier momento durante el período de gracia.",
+        "immediateOption": "Eliminación Inmediata",
+        "immediateDescription": "Tu cuenta y todos los datos serán eliminados permanentemente de inmediato. Esta acción no se puede deshacer.",
+        "warningImmediate": "Esta acción no se puede deshacer",
+        "warningGracePeriod": "Esta acción no se puede deshacer después de 30 días",
         "confirmText": "Escribe eliminar para confirmar",
         "confirmPlaceholder": "delete",
         "keepAccount": "Mantener Cuenta",
@@ -132,6 +139,31 @@
     "billing": {
       "title": "Facturación y Suscripción",
       "description": "Gestiona tus créditos y suscripción",
+      "totalCredits": "Total de Créditos Disponibles",
+      "allCredits": "Todos los créditos",
+      "monthlyCredits": "Créditos Mensuales",
+      "renewalIn": "Renovación en {days} {days, plural, one {día} other {días}}",
+      "noRenewal": "No hay renovación programada",
+      "extraCredits": "Créditos Extra",
+      "nonExpiring": "No expiran",
+      "renews": "Se renueva {date}",
+      "manageSubscription": "Gestionar Suscripción",
+      "getAdditionalCredits": "Obtener Créditos Adicionales",
+      "changePlan": "Cambiar Plan",
+      "annualCommitment": "Compromiso Anual",
+      "activeUntil": "Activo hasta {date}",
+      "subscriptionCancelled": "Tu suscripción será cancelada el {date}",
+      "reactivate": "Reactivar",
+      "creditsExplained": "Créditos explicados",
+      "cancelPlan": "Cancelar Plan",
+      "reactivateSubscription": "Reactivar Suscripción",
+      "reactivating": "Reactivando...",
+      "cancelDialogTitle": "Cancelar Suscripción",
+      "cancelDialogDescription": "¿Estás seguro de que quieres cancelar tu suscripción? Continuarás teniendo acceso hasta {date}.",
+      "keepSubscription": "Mantener Suscripción",
+      "cancelling": "Cancelando...",
+      "localMode": "Modo Local Activo",
+      "localModeDescription": "Todas las funciones premium están disponibles en este entorno",
       "insufficientCredits": "Créditos insuficientes",
       "insufficientCreditsMessage": "Verificación de facturación fallida: Créditos insuficientes. Tu saldo es {balance}. Por favor, añade créditos para continuar.",
       "creditsExhausted": "Te has quedado sin créditos. Actualiza ahora.",
@@ -145,7 +177,10 @@
       "opening": "Abriendo Base de Conocimientos",
       "redirecting": "Redirigiendo a la página de Base de Conocimientos..."
     },
-    "integrations": "Integraciones"
+    "integrations": {
+      "opening": "Abriendo Integraciones",
+      "redirecting": "Redirigiendo a la página de Integraciones..."
+    }
   },
   "triggers": {
     "getStarted": "Comienza agregando un trigger",
@@ -518,6 +553,9 @@
     "downgradePending": "Degradación Pendiente",
     "downgrade": "Degradar",
     "switchToLegacyYearly": "Cambiar a Anual Legacy",
+    "confirmDowngradeTitle": "¿Estás seguro de que quieres degradar?",
+    "confirmDowngradeDescription": "Estás a punto de cambiar al plan {planName}. Este cambio se aplicará al final de tu período de facturación actual.",
+    "confirmDowngrade": "Sí, Degradar",
     "pickPlan": "Elige el plan que funciona para ti.",
     "reachedLimit": "Has alcanzado tus límites.",
     "projectLimit": "Límite de Proyecto ({current}/{limit})",
@@ -748,6 +786,25 @@
     "pt": "Português",
     "fr": "Français",
     "es": "Español"
+  },
+  "notifications": {
+    "title": "Notificaciones",
+    "description": "Gestiona cómo recibes notificaciones",
+    "preferences": "Preferencias de Notificación",
+    "channels": "Canales de Notificación",
+    "emailNotifications": "Notificaciones por Correo",
+    "emailDescription": "Recibir notificaciones por correo",
+    "pushNotifications": "Notificaciones Push",
+    "pushDescription": "Recibir notificaciones push en tu dispositivo",
+    "inAppNotifications": "Notificaciones en la App",
+    "inAppDescription": "Ver notificaciones dentro de la app",
+    "deviceTokens": "Dispositivos Registrados",
+    "noDevices": "No hay dispositivos registrados",
+    "settingsUpdated": "Preferencias de notificación actualizadas correctamente",
+    "settingsFailed": "Error al actualizar preferencias de notificación",
+    "enableAll": "Activar Todas",
+    "disableAll": "Desactivar Todas",
+    "saveChanges": "Guardar Cambios"
   },
   "suna": {
     "samplePrompts": "Prompts de ejemplo",
