--- a/frontend/translations/fr.json
+++ b/frontend/translations/fr.json
@@ -77,6 +77,13 @@
         "billingRemoved": "Toutes les données de facturation seront supprimées",
         "scheduled30Days": "Ton compte sera programmé pour suppression dans 30 jours",
         "gracePeriod": "Tu peux annuler cette demande à tout moment pendant la période de grâce de 30 jours. Après 30 jours, toutes tes données seront définitivement supprimées et ne pourront pas être récupérées.",
+        "chooseDeletionType": "Choisis le type de suppression :",
+        "gracePeriodOption": "Période de Grâce de 30 Jours",
+        "gracePeriodDescription": "Ton compte sera programmé pour suppression dans 30 jours. Tu peux annuler cette demande à tout moment pendant la période de grâce.",
+        "immediateOption": "Suppression Immédiate",
+        "immediateDescription": "Ton compte et toutes les données seront définitivement supprimés immédiatement. Cette action ne peut pas être annulée.",
+        "warningImmediate": "Cette action ne peut pas être annulée",
+        "warningGracePeriod": "Cette action ne peut pas être annulée après 30 jours",
         "confirmText": "Tape supprimer pour confirmer",
         "confirmPlaceholder": "delete",
         "keepAccount": "Garder le Compte",
@@ -132,6 +139,31 @@
     "billing": {
       "title": "Facturation et Abonnement",
       "description": "Gérez vos crédits et votre abonnement",
+      "totalCredits": "Total des Crédits Disponibles",
+      "allCredits": "Tous les crédits",
+      "monthlyCredits": "Crédits Mensuels",
+      "renewalIn": "Renouvellement dans {days} {days, plural, one {jour} other {jours}}",
+      "noRenewal": "Aucun renouvellement programmé",
+      "extraCredits": "Crédits Supplémentaires",
+      "nonExpiring": "N'expirent pas",
+      "renews": "Se renouvelle {date}",
+      "manageSubscription": "Gérer l'Abonnement",
+      "getAdditionalCredits": "Obtenir des Crédits Supplémentaires",
+      "changePlan": "Changer de Plan",
+      "annualCommitment": "Engagement Annuel",
+      "activeUntil": "Actif jusqu'au {date}",
+      "subscriptionCancelled": "Votre abonnement sera annulé le {date}",
+      "reactivate": "Réactiver",
+      "creditsExplained": "Crédits expliqués",
+      "cancelPlan": "Annuler le Plan",
+      "reactivateSubscription": "Réactiver l'Abonnement",
+      "reactivating": "Réactivation en cours...",
+      "cancelDialogTitle": "Annuler l'Abonnement",
+      "cancelDialogDescription": "Êtes-vous sûr de vouloir annuler votre abonnement ? Vous continuerez à avoir accès jusqu'au {date}.",
+      "keepSubscription": "Garder l'Abonnement",
+      "cancelling": "Annulation en cours...",
+      "localMode": "Mode Local Actif",
+      "localModeDescription": "Toutes les fonctionnalités premium sont disponibles dans cet environnement",
       "insufficientCredits": "Crédits insuffisants",
       "insufficientCreditsMessage": "Vérification de facturation échouée : Crédits insuffisants. Votre solde est {balance}. Veuillez ajouter des crédits pour continuer.",
       "creditsExhausted": "Vous avez épuisé vos crédits. Mettez à niveau maintenant.",
@@ -145,7 +177,10 @@
       "opening": "Ouverture de la Base de Connaissances",
       "redirecting": "Redirection vers la page Base de Connaissances..."
     },
-    "integrations": "Intégrations"
+    "integrations": {
+      "opening": "Ouverture des Intégrations",
+      "redirecting": "Redirection vers la page Intégrations..."
+    }
   },
   "triggers": {
     "getStarted": "Commence en ajoutant un trigger",
@@ -518,6 +553,9 @@
     "downgradePending": "Rétrogradation en Attente",
     "downgrade": "Rétrograder",
     "switchToLegacyYearly": "Passer à l'Annuel Legacy",
+    "confirmDowngradeTitle": "Veux-tu vraiment rétrograder ?",
+    "confirmDowngradeDescription": "Tu es sur le point de passer au plan {planName}. Ce changement prendra effet à la fin de ton période de facturation actuelle.",
+    "confirmDowngrade": "Oui, Rétrograder",
     "pickPlan": "Choisis le plan qui fonctionne pour toi.",
     "reachedLimit": "Tu as atteint tes limites.",
     "projectLimit": "Limite de Projet ({current}/{limit})",
@@ -748,6 +786,25 @@
     "pt": "Português",
     "fr": "Français",
     "es": "Español"
+  },
+  "notifications": {
+    "title": "Notifications",
+    "description": "Gère comment tu reçois les notifications",
+    "preferences": "Préférences de Notification",
+    "channels": "Canaux de Notification",
+    "emailNotifications": "Notifications par Email",
+    "emailDescription": "Recevoir des notifications par email",
+    "pushNotifications": "Notifications Push",
+    "pushDescription": "Recevoir des notifications push sur ton appareil",
+    "inAppNotifications": "Notifications dans l'App",
+    "inAppDescription": "Voir les notifications dans l'app",
+    "deviceTokens": "Appareils Enregistrés",
+    "noDevices": "Aucun appareil enregistré",
+    "settingsUpdated": "Préférences de notification mises à jour avec succès",
+    "settingsFailed": "Échec de la mise à jour des préférences de notification",
+    "enableAll": "Activer Toutes",
+    "disableAll": "Désactiver Toutes",
+    "saveChanges": "Sauvegarder"
   },
   "suna": {
     "samplePrompts": "Exemples de prompts",
