--- a/frontend/translations/it.json
+++ b/frontend/translations/it.json
@@ -77,8 +77,15 @@
         "billingRemoved": "Tutti i dati di fatturazione saranno rimossi",
         "scheduled30Days": "Il tuo account sarà programmato per l'eliminazione tra 30 giorni",
         "gracePeriod": "Il tuo account sarà programmato per l'eliminazione tra 30 giorni. Puoi annullare questa richiesta in qualsiasi momento durante il periodo di grazia.",
-        "confirmText": "Digita {text} per confermare",
-        "confirmPlaceholder": "ELIMINA",
+        "chooseDeletionType": "Scegli il tipo di eliminazione:",
+        "gracePeriodOption": "Periodo di Grazia di 30 Giorni",
+        "gracePeriodDescription": "Il tuo account sarà programmato per l'eliminazione tra 30 giorni. Puoi annullare questa richiesta in qualsiasi momento durante il periodo di grazia.",
+        "immediateOption": "Eliminazione Immediata",
+        "immediateDescription": "Il tuo account e tutti i dati saranno eliminati permanentemente immediatamente. Questa azione non può essere annullata.",
+        "warningImmediate": "Questa azione non può essere annullata",
+        "warningGracePeriod": "Questa azione non può essere annullata dopo 30 giorni",
+        "confirmText": "Digita delete per confermare",
+        "confirmPlaceholder": "delete",
         "keepAccount": "Mantieni account",
         "cancelDeletionTitle": "Annulla Eliminazione Account",
         "cancelDeletionDescription": "Vuoi annullare l'eliminazione del tuo account? Il tuo account e tutti i dati saranno preservati.",
@@ -549,6 +556,9 @@
     "downgradePending": "Downgrade in sospeso",
     "downgrade": "Passa a un piano inferiore",
     "switchToLegacyYearly": "Passa al piano annuale legacy",
+    "confirmDowngradeTitle": "Sei sicuro di voler passare a un piano inferiore?",
+    "confirmDowngradeDescription": "Stai per passare al piano {planName}. Questa modifica avrà effetto alla fine del tuo attuale periodo di fatturazione.",
+    "confirmDowngrade": "Sì, Passa a un Piano Inferiore",
     "pickPlan": "Scegli il piano che fa per te.",
     "reachedLimit": "Hai raggiunto i tuoi limiti.",
     "projectLimit": "Limite progetti ({current}/{limit})",
@@ -773,7 +783,31 @@
   "languages": {
     "en": "English",
     "de": "Deutsch",
-    "it": "Italiano"
+    "it": "Italiano",
+    "zh": "中文",
+    "ja": "日本語",
+    "pt": "Português",
+    "fr": "Français",
+    "es": "Español"
+  },
+  "notifications": {
+    "title": "Notifiche",
+    "description": "Gestisci come ricevi le notifiche",
+    "preferences": "Preferenze di Notifica",
+    "channels": "Canali di Notifica",
+    "emailNotifications": "Notifiche Email",
+    "emailDescription": "Ricevere notifiche via email",
+    "pushNotifications": "Notifiche Push",
+    "pushDescription": "Ricevere notifiche push sul tuo dispositivo",
+    "inAppNotifications": "Notifiche nell'App",
+    "inAppDescription": "Vedere le notifiche nell'app",
+    "deviceTokens": "Dispositivi Registrati",
+    "noDevices": "Nessun dispositivo registrato",
+    "settingsUpdated": "Preferenze di notifica aggiornate con successo",
+    "settingsFailed": "Impossibile aggiornare le preferenze di notifica",
+    "enableAll": "Abilita Tutte",
+    "disableAll": "Disabilita Tutte",
+    "saveChanges": "Salva modifiche"
   },
   "suna": {
     "samplePrompts": "Prompt di esempio",
