--- a/frontend/translations/ja.json
+++ b/frontend/translations/ja.json
@@ -77,6 +77,13 @@
         "billingRemoved": "すべての請求データが削除されます",
         "scheduled30Days": "アカウントは30日後に削除予定となります",
         "gracePeriod": "30日の猶予期間中はいつでもこのリクエストをキャンセルできます。30日後、すべてのデータが永久に削除され、復元できません。",
+        "chooseDeletionType": "削除タイプを選択：",
+        "gracePeriodOption": "30日の猶予期間",
+        "gracePeriodDescription": "アカウントは30日後に削除予定となります。猶予期間中はいつでもこのリクエストをキャンセルできます。",
+        "immediateOption": "即座に削除",
+        "immediateDescription": "アカウントとすべてのデータが即座に永久に削除されます。この操作は元に戻せません。",
+        "warningImmediate": "この操作は元に戻せません",
+        "warningGracePeriod": "この操作は30日後には元に戻せません",
         "confirmText": "削除と入力して確認",
         "confirmPlaceholder": "delete",
         "keepAccount": "アカウントを保持",
@@ -132,6 +139,31 @@
     "billing": {
       "title": "請求とサブスクリプション",
       "description": "クレジットとサブスクリプションを管理",
+      "totalCredits": "利用可能なクレジット合計",
+      "allCredits": "すべてのクレジット",
+      "monthlyCredits": "月額クレジット",
+      "renewalIn": "{days} {days, plural, one {日} other {日}}後に更新",
+      "noRenewal": "更新予定なし",
+      "extraCredits": "追加クレジット",
+      "nonExpiring": "期限なし",
+      "renews": "{date}に更新",
+      "manageSubscription": "サブスクリプションを管理",
+      "getAdditionalCredits": "追加クレジットを取得",
+      "changePlan": "プランを変更",
+      "annualCommitment": "年間コミットメント",
+      "activeUntil": "{date}まで有効",
+      "subscriptionCancelled": "サブスクリプションは {date} にキャンセルされます",
+      "reactivate": "再有効化",
+      "creditsExplained": "クレジットの説明",
+      "cancelPlan": "プランをキャンセル",
+      "reactivateSubscription": "サブスクリプションを再有効化",
+      "reactivating": "再有効化中...",
+      "cancelDialogTitle": "サブスクリプションをキャンセル",
+      "cancelDialogDescription": "サブスクリプションをキャンセルしてもよろしいですか？{date}までアクセスできます。",
+      "keepSubscription": "サブスクリプションを維持",
+      "cancelling": "キャンセル中...",
+      "localMode": "ローカルモード有効",
+      "localModeDescription": "この環境ではすべてのプレミアム機能が利用可能です",
       "insufficientCredits": "クレジット不足",
       "insufficientCreditsMessage": "請求チェックに失敗しました：クレジット不足。残高は {balance} です。続行するにはクレジットを追加してください。",
       "creditsExhausted": "クレジットがなくなりました。今すぐアップグレードしてください。",
@@ -145,7 +177,10 @@
       "opening": "ナレッジベースを開いています",
       "redirecting": "ナレッジベースページにリダイレクト中..."
     },
-    "integrations": "連携"
+    "integrations": {
+      "opening": "統合を開いています",
+      "redirecting": "統合ページにリダイレクト中..."
+    }
   },
   "triggers": {
     "getStarted": "トリガーを追加して始める",
@@ -518,6 +553,9 @@
     "downgradePending": "ダウングレード保留中",
     "downgrade": "ダウングレード",
     "switchToLegacyYearly": "レガシー年額に切り替え",
+    "confirmDowngradeTitle": "ダウングレードしてもよろしいですか？",
+    "confirmDowngradeDescription": "{planName}プランに変更しようとしています。この変更は現在の請求期間の終了時に適用されます。",
+    "confirmDowngrade": "はい、ダウングレード",
     "pickPlan": "自分に合ったプランを選んで。",
     "reachedLimit": "制限に達しました。",
     "projectLimit": "プロジェクト制限 ({current}/{limit})",
@@ -748,6 +786,25 @@
     "pt": "Português",
     "fr": "Français",
     "es": "Español"
+  },
+  "notifications": {
+    "title": "通知",
+    "description": "通知の受信方法を管理",
+    "preferences": "通知設定",
+    "channels": "通知チャネル",
+    "emailNotifications": "メール通知",
+    "emailDescription": "メールで通知を受信",
+    "pushNotifications": "プッシュ通知",
+    "pushDescription": "デバイスでプッシュ通知を受信",
+    "inAppNotifications": "アプリ内通知",
+    "inAppDescription": "アプリ内で通知を表示",
+    "deviceTokens": "登録済みデバイス",
+    "noDevices": "登録されたデバイスがありません",
+    "settingsUpdated": "通知設定が正常に更新されました",
+    "settingsFailed": "通知設定の更新に失敗しました",
+    "enableAll": "すべて有効化",
+    "disableAll": "すべて無効化",
+    "saveChanges": "変更を保存"
   },
   "suna": {
     "samplePrompts": "サンプルプロンプト",
