--- a/frontend/translations/pt.json
+++ b/frontend/translations/pt.json
@@ -77,6 +77,13 @@
         "billingRemoved": "Todos os dados de cobrança serão removidos",
         "scheduled30Days": "Tua conta será agendada para exclusão em 30 dias",
         "gracePeriod": "Podes cancelar este pedido a qualquer momento durante o período de carência de 30 dias. Após 30 dias, todos os teus dados serão permanentemente excluídos e não poderão ser recuperados.",
+        "chooseDeletionType": "Escolhe o tipo de exclusão:",
+        "gracePeriodOption": "Período de Carência de 30 Dias",
+        "gracePeriodDescription": "Tua conta será agendada para exclusão em 30 dias. Podes cancelar este pedido a qualquer momento durante o período de carência.",
+        "immediateOption": "Exclusão Imediata",
+        "immediateDescription": "Tua conta e todos os dados serão permanentemente excluídos imediatamente. Esta ação não pode ser desfeita.",
+        "warningImmediate": "Esta ação não pode ser desfeita",
+        "warningGracePeriod": "Esta ação não pode ser desfeita após 30 dias",
         "confirmText": "Digite excluir para confirmar",
         "confirmPlaceholder": "delete",
         "keepAccount": "Manter Conta",
@@ -132,6 +139,31 @@
     "billing": {
       "title": "Cobrança e Assinatura",
       "description": "Gerencie seus créditos e assinatura",
+      "totalCredits": "Total de Créditos Disponíveis",
+      "allCredits": "Todos os créditos",
+      "monthlyCredits": "Créditos Mensais",
+      "renewalIn": "Renovação em {days} {days, plural, one {dia} other {dias}}",
+      "noRenewal": "Nenhuma renovação agendada",
+      "extraCredits": "Créditos Extras",
+      "nonExpiring": "Não expiram",
+      "renews": "Renova em {date}",
+      "manageSubscription": "Gerenciar Assinatura",
+      "getAdditionalCredits": "Obter Créditos Adicionais",
+      "changePlan": "Mudar Plano",
+      "annualCommitment": "Compromisso Anual",
+      "activeUntil": "Ativo até {date}",
+      "subscriptionCancelled": "Sua assinatura será cancelada em {date}",
+      "reactivate": "Reativar",
+      "creditsExplained": "Créditos explicados",
+      "cancelPlan": "Cancelar Plano",
+      "reactivateSubscription": "Reativar Assinatura",
+      "reactivating": "Reativando...",
+      "cancelDialogTitle": "Cancelar Assinatura",
+      "cancelDialogDescription": "Tem certeza de que deseja cancelar sua assinatura? Você continuará tendo acesso até {date}.",
+      "keepSubscription": "Manter Assinatura",
+      "cancelling": "Cancelando...",
+      "localMode": "Modo Local Ativo",
+      "localModeDescription": "Todos os recursos premium estão disponíveis neste ambiente",
       "insufficientCredits": "Créditos insuficientes",
       "insufficientCreditsMessage": "Verificação de cobrança falhou: Créditos insuficientes. Seu saldo é {balance}. Por favor, adicione créditos para continuar.",
       "creditsExhausted": "Você ficou sem créditos. Atualize agora.",
@@ -145,7 +177,10 @@
       "opening": "Abrindo Base de Conhecimento",
       "redirecting": "Redirecionando para a página da Base de Conhecimento..."
     },
-    "integrations": "Integrações"
+    "integrations": {
+      "opening": "Abrindo Integrações",
+      "redirecting": "Redirecionando para a página de Integrações..."
+    }
   },
   "triggers": {
     "getStarted": "Começa adicionando um trigger",
@@ -518,6 +553,9 @@
     "downgradePending": "Rebaixamento Pendente",
     "downgrade": "Rebaixar",
     "switchToLegacyYearly": "Mudar para Anual Legado",
+    "confirmDowngradeTitle": "Tens certeza que queres rebaixar?",
+    "confirmDowngradeDescription": "Estás prestes a rebaixar para {planName}. Esta mudança entrará em vigor no final do teu período de faturamento atual.",
+    "confirmDowngrade": "Sim, Rebaixar",
     "pickPlan": "Escolhe o plano que funciona para ti.",
     "reachedLimit": "Atingiste teus limites.",
     "projectLimit": "Limite de Projeto ({current}/{limit})",
@@ -748,6 +786,25 @@
     "pt": "Português",
     "fr": "Français",
     "es": "Español"
+  },
+  "notifications": {
+    "title": "Notificações",
+    "description": "Gerencia como recebes notificações",
+    "preferences": "Preferências de Notificação",
+    "channels": "Canais de Notificação",
+    "emailNotifications": "Notificações por Email",
+    "emailDescription": "Receber notificações por email",
+    "pushNotifications": "Notificações Push",
+    "pushDescription": "Receber notificações push no teu dispositivo",
+    "inAppNotifications": "Notificações no App",
+    "inAppDescription": "Ver notificações dentro do app",
+    "deviceTokens": "Dispositivos Registrados",
+    "noDevices": "Nenhum dispositivo registrado",
+    "settingsUpdated": "Preferências de notificação atualizadas com sucesso",
+    "settingsFailed": "Falha ao atualizar preferências de notificação",
+    "enableAll": "Ativar Todas",
+    "disableAll": "Desativar Todas",
+    "saveChanges": "Salvar Mudanças"
   },
   "suna": {
     "samplePrompts": "Prompts de exemplo",
