--- a/frontend/translations/zh.json
+++ b/frontend/translations/zh.json
@@ -77,6 +77,13 @@
         "billingRemoved": "所有账单数据将被移除",
         "scheduled30Days": "你的账户将在30天后安排删除",
         "gracePeriod": "你可以在30天宽限期内随时取消此请求。30天后，你的所有数据将被永久删除且无法恢复。",
+        "chooseDeletionType": "选择删除类型：",
+        "gracePeriodOption": "30天宽限期",
+        "gracePeriodDescription": "你的账户将在30天后安排删除。你可以在宽限期内随时取消此请求。",
+        "immediateOption": "立即删除",
+        "immediateDescription": "你的账户和所有数据将立即永久删除。此操作无法撤销。",
+        "warningImmediate": "此操作无法撤销",
+        "warningGracePeriod": "此操作在30天后无法撤销",
         "confirmText": "输入删除以确认",
         "confirmPlaceholder": "delete",
         "keepAccount": "保留账户",
@@ -132,6 +139,31 @@
     "billing": {
       "title": "账单和订阅",
       "description": "管理您的积分和订阅",
+      "totalCredits": "总可用积分",
+      "allCredits": "所有积分",
+      "monthlyCredits": "月度积分",
+      "renewalIn": "在 {days} {days, plural, one {天} other {天}} 后续费",
+      "noRenewal": "未安排续费",
+      "extraCredits": "额外积分",
+      "nonExpiring": "不过期",
+      "renews": "在 {date} 续费",
+      "manageSubscription": "管理订阅",
+      "getAdditionalCredits": "获取额外积分",
+      "changePlan": "更改计划",
+      "annualCommitment": "年度承诺",
+      "activeUntil": "有效期至 {date}",
+      "subscriptionCancelled": "您的订阅将在 {date} 取消",
+      "reactivate": "重新激活",
+      "creditsExplained": "积分说明",
+      "cancelPlan": "取消计划",
+      "reactivateSubscription": "重新激活订阅",
+      "reactivating": "正在重新激活...",
+      "cancelDialogTitle": "取消订阅",
+      "cancelDialogDescription": "您确定要取消订阅吗？您将继续拥有访问权限直到 {date}。",
+      "keepSubscription": "保留订阅",
+      "cancelling": "正在取消...",
+      "localMode": "本地模式已激活",
+      "localModeDescription": "此环境中所有高级功能均可用",
       "insufficientCredits": "积分不足",
       "insufficientCreditsMessage": "账单检查失败：积分不足。您的余额为 {balance}。请添加积分以继续。",
       "creditsExhausted": "您的积分已用完。立即升级。",
@@ -145,7 +177,10 @@
       "opening": "正在打开知识库",
       "redirecting": "正在重定向到知识库页面..."
     },
-    "integrations": "集成"
+    "integrations": {
+      "opening": "正在打开集成",
+      "redirecting": "正在重定向到集成页面..."
+    }
   },
   "triggers": {
     "getStarted": "通过添加触发器开始",
@@ -518,6 +553,9 @@
     "downgradePending": "降级待处理",
     "downgrade": "降级",
     "switchToLegacyYearly": "切换到旧版年付",
+    "confirmDowngradeTitle": "您确定要降级吗？",
+    "confirmDowngradeDescription": "您即将切换到{planName}计划。此更改将在您当前计费周期结束时生效。",
+    "confirmDowngrade": "是的，降级",
     "pickPlan": "选择适合你的计划。",
     "reachedLimit": "你已达到限制。",
     "projectLimit": "项目限制 ({current}/{limit})",
@@ -748,6 +786,25 @@
     "pt": "Português",
     "fr": "Français",
     "es": "Español"
+  },
+  "notifications": {
+    "title": "通知",
+    "description": "管理您接收通知的方式",
+    "preferences": "通知偏好设置",
+    "channels": "通知渠道",
+    "emailNotifications": "邮件通知",
+    "emailDescription": "通过邮件接收通知",
+    "pushNotifications": "推送通知",
+    "pushDescription": "在您的设备上接收推送通知",
+    "inAppNotifications": "应用内通知",
+    "inAppDescription": "在应用内查看通知",
+    "deviceTokens": "已注册设备",
+    "noDevices": "未注册设备",
+    "settingsUpdated": "通知偏好设置更新成功",
+    "settingsFailed": "更新通知偏好设置失败",
+    "enableAll": "全部启用",
+    "disableAll": "全部禁用",
+    "saveChanges": "保存更改"
   },
   "suna": {
     "samplePrompts": "示例提示",
