Update referral button to card-style design with blur effect

--- a/frontend/translations/de.json
+++ b/frontend/translations/de.json
@@ -237,6 +237,8 @@
   },
   "sidebar": {
     "referAndEarn": "Empfehlen",
+    "referralShareTitle": "Freunde empfehlen",
+    "referralShareSubtitle": "Erhalte 400 Credits",
     "new": "Neu",
     "upgrade": "Upgrade",
     "chats": "Chats",
