--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -237,6 +237,8 @@
   },
   "sidebar": {
     "referAndEarn": "Refer & Earn",
+    "referralShareTitle": "Refer Friends",
+    "referralShareSubtitle": "Get 400 credits",
     "new": "New",
     "upgrade": "Upgrade",
     "chats": "Chats",
