--- a/frontend/translations/fr.json
+++ b/frontend/translations/fr.json
@@ -237,6 +237,8 @@
   },
   "sidebar": {
     "referAndEarn": "Parrainer et Gagner",
+    "referralShareTitle": "Parrainer des Amis",
+    "referralShareSubtitle": "Gagnez 400 crédits",
     "new": "Nouveau",
     "upgrade": "Améliorer",
     "chats": "Chats",
