--- a/frontend/translations/it.json
+++ b/frontend/translations/it.json
@@ -237,6 +237,8 @@
   },
   "sidebar": {
     "referAndEarn": "Invita e Guadagna",
+    "referralShareTitle": "Invita Amici",
+    "referralShareSubtitle": "Ottieni 400 crediti",
     "new": "Nuovo",
     "upgrade": "Aggiorna",
     "chats": "Chat",
