--- a/frontend/translations/ja.json
+++ b/frontend/translations/ja.json
@@ -237,6 +237,8 @@
   },
   "sidebar": {
     "referAndEarn": "紹介して獲得",
+    "referralShareTitle": "友達を紹介",
+    "referralShareSubtitle": "400クレジット獲得",
     "new": "新規",
     "upgrade": "アップグレード",
     "chats": "チャット",
