--- a/frontend/translations/pt.json
+++ b/frontend/translations/pt.json
@@ -237,6 +237,8 @@
   },
   "sidebar": {
     "referAndEarn": "Indicar e Ganhar",
+    "referralShareTitle": "Indicar Amigos",
+    "referralShareSubtitle": "Ganhe 400 créditos",
     "new": "Novo",
     "upgrade": "Melhorar",
     "chats": "Chats",
