--- a/frontend/translations/zh.json
+++ b/frontend/translations/zh.json
@@ -237,6 +237,8 @@
   },
   "sidebar": {
     "referAndEarn": "推荐赚取",
+    "referralShareTitle": "推荐好友",
+    "referralShareSubtitle": "获得 400 积分",
     "new": "新",
     "upgrade": "升级",
     "chats": "聊天",
