--- a/frontend/translations/es.json
+++ b/frontend/translations/es.json
@@ -237,6 +237,8 @@
   },
   "sidebar": {
     "referAndEarn": "Referir y Ganar",
+    "referralShareTitle": "Referir Amigos",
+    "referralShareSubtitle": "Obtén 400 créditos",
     "new": "Nuevo",
     "upgrade": "Mejorar",
     "chats": "Chats",
