--- a/frontend/translations/de.json
+++ b/frontend/translations/de.json
@@ -46,6 +46,14 @@
     "general": {
       "title": "Profileinstellungen",
       "description": "Verwalte deine Kontoinformationen",
+      "profilePicture": {
+        "title": "Profilbild",
+        "upload": "Avatar hochladen",
+        "hint": "JPG, PNG oder GIF. Max 5MB.",
+        "invalidType": "Bitte wähle eine Bilddatei",
+        "tooLarge": "Bild muss kleiner als 5MB sein",
+        "uploadFailed": "Profilbild konnte nicht hochgeladen werden"
+      },
       "name": "Name",
       "email": "E-Mail",
       "namePlaceholder": "Gib deinen Namen ein",
